Implemented functionality for LSQ, BTB
- Implemented takesnapshot and restoresnapshot functions for restoring URF during branch misprediction.

- todo: Integrate FU's, handle other instructions including memory and branch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,10 @@ add_executable(apex_simulator
         URF.cpp
         ForwardBus.cpp
         ForwardBus.h
+        LSQ.cpp
+        LSQ.h
+        lsq_entry.cpp
+        lsq_entry.h
+        BTB.cpp
+        BTB.h
         Makefile)
